--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   provider: ^6.1.2
   image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  path: ^1.9.0
 
 
   # The following adds the Cupertino Icons font to your application.
